# mlx-vlm

./: .gitignore  .pre-commit-config.yaml  404.html  CLAUDE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  README_CN.md  anemll_tbq_swa.MD  convert_glm_ocr.py  download_model.py  index.html  masked_scatter.py  mkdocs.yml  plan_tasks_0_through_4dot3.md  pyproject.toml  pytest.ini  requirements.in  requirements.txt  setup.py  sitemap.xml  test.txt  test_completion_masking.py  test_gemma4_nan_fixes.py  test_gemma4_training_smoke.py  test_glm_ocr.py  update_changelog.py
.claude-plugin/: marketplace.json
.github/: FUNDING.yml
.github/workflows/: deploy-docs.yml  docs.yml  python-publish.yml  tests.yml  update-changelog.yml
agents/grounded_reasoning/: README.md  agent.py  fp_tools.py  mask_ops.py  viz.py
benchmark_results/continuous_batching_scheduler/: after.json  before.json  summary.csv
benchmark_results/minimax_m3_128_stream/: after_2048.json  after_64.json  before.json  summary.csv
benchmark_results/minimax_m3_128_stream_r4/: after_2048_r4.json  after_64_r4.json  summary.csv
benchmark_results/minimax_m3_scheduler/: after_2048.json  after_64.json  after_batched_prefill_smoke.json  after_smoke.json  before.json  summary.csv
benchmarks/: continuous_batching_scheduler.py  minimax_m3_scheduler.py
changelog/: index.html
cli_reference/: index.html
community_projects/: index.html
computer_use/: CLAUDE.md  README.md  README_CN.md  action_parser.py  autonomous_gui_agent.py  autonomous_gui_agent_voice.py  gui_agent.py  gui_agent_voice.py  main.py  main_voice.py  navigation_history.csv  requirements.txt  utils.py
contributing/: index.html
docs/: changelog.md  cli_reference.md  dots_ocr.md  dots_ocr_hf_to_mlx_mapping.csv  examples.md  index.md  mla_fp8_kv_cache.md  report_issues.md  updated dots_ocr integration with mlx-vlm v2.md  usage.md
docs/cn/: cli_reference.md  community_projects.md  contributing.md  examples.md  (+4 more)
examples/: batch_example.py  batched.py  dots_mocr_demo.ipynb  dots_ocr_adapter_demo.py  dots_ocr_infer.py  dots_ocr_load_and_forward.py  dots_ocr_mask_viz.py  falcon_perception_demo.ipynb  g3.py  gemma4_realtime.py  index.html  interleaved_text_images.ipynb  multi_image_generation.ipynb  object_detection.ipynb  object_pointing.ipynb  object_pointing_molmo2.ipynb  ocr_with_region.ipynb  omni.py  qwen3_omni_demo.py  sam3_1_demo.ipynb  sam3_demo.ipynb  sam3_demo.py  sam3_video_track.py  sharded_generate.py  sharded_kimi_generate.py  structured_outputs.py  test_joycaption.py  text_extraction.ipynb  utils.py  video_generation.ipynb  video_understanding.ipynb
grounded_reasoning/: README.md  demo.ipynb  mask_ops.py  requirements.txt
installation/: index.html
issues/: 2025-11-25-issue-florence-2-conversions.md
mlx_vlm/: .gitignore  LLAVA_FINETUNING.md  LORA.MD  __init__.py  __main__.py  _transformers_compat.py  apc.py  apc_adapters.py  apc_storage.py  array_utils.py  batch_processor.py  batch_utils.py  batched_utils.py  chat.py  chat_ui.py  configure_clients.py  convert.py  deprecation.py  edit_image.py  generate.py  generate_image.py  lora.py  mla_fp8.py  model_catalog.py  one_bit.py  prompt_utils.py  quant_utils.py  realtime.py  responses_models.py  responses_store.py  sample_utils.py  server.py  setup.py  smolvlm_video_generate.py  structured.py  tokenizer_utils.py  triattention.py  triattention_calibrate.py  turboquant.py  utils.py  (+3 more)
report_issues/: index.html
scripts/: bench_dots_vision.py  benchmark_models.py  dots_ocr_mask_visualizer.py  la_parity_mlx.py  la_parity_ref.py  la_pbd_oracle.py  la_upload_mlx_community.py  run_dots_tests.sh  validate_oc.sh
search/: search_index.json
skills/: gemini-extension.json
src/: generate.py  utils.py
tests/: test_auto_processor_registration.py  test_dots_end2end.py  test_dots_masks_batching.py  test_dots_vision_parity.py  test_image_end_index.py  test_sam3_closeness.py  test_server_header.py
tests_dots/: test_adapter.py  test_config.py  test_converter.py  test_layers.py  test_loader.py  test_mask_viz.py  test_perf_flags.py  test_processor.py  test_textstub.py
usage/: index.html
(+1357 files in other folders)
